# ozon_watch_parser

./: .gitignore  README.md  config.toml  output.md  pyproject.toml  requirements.txt  run_parser.py
src/ozon_watch_parser/: cli.py
src/ozon_watch_parser/browser/: __init__.py  manager.py
src/ozon_watch_parser/config/: __init__.py  brands.py  columns.py  settings.py
src/ozon_watch_parser/domain/: __init__.py  normalize.py  watch_fields.py
src/ozon_watch_parser/export/: __init__.py  xlsx.py
src/ozon_watch_parser/ozon/: __init__.py  extractor.py  models.py
src/ozon_watch_parser/services/: __init__.py  parser.py
src/ozon_watch_parser/utils/: dates.py  tax.py  url.py
tests/: test_normalize.py
