[project]
name = "ozon-watch-parser"
version = "0.1.0"
description = "Ozon smart watch parser with CDP-first browser workflow."
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "playwright-stealth",
    "pandas",
    "openpyxl",
    "requests",
    "python-dotenv",
]

[project.scripts]
ozon-watch-parser = "ozon_watch_parser.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
